[package]
name = "treasury"
version = "0.1.0"
authors = ["Jack Swenson <jacksonswenson22@gmail.com>"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["shade-protocol/backtraces"]
debug-print = ["shade-protocol/debug-print"]

[dependencies]
shade-protocol = { version = "0.1.0", path = "../../packages/shade_protocol", features = [
  "treasury",
  "snip20",
] }
schemars = "0.7"
chrono = "0.4.19"

[dev-dependencies]
contract_harness = { version = "0.1.0", path = "../../packages/contract_harness", features = ["treasury", "treasury_manager", "scrt_staking", "snip20_reference_impl", "snip20" ] }
# fadroma = { path = "../../../fadroma-staking/crates/fadroma", features = ["ensemble", "scrt"] }
shade-protocol = { version = "0.1.0", path = "../../packages/shade_protocol", features = [
  "mint",
  "band",
  "ensemble"
] }
