[package]
name = "treasury"
version = "0.1.0"
authors = ["Jackson Swenson <jacksonswenson@securesecrets.com>"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["shade-protocol/backtraces"]
debug-print = ["shade-protocol/debug-print"]

[dependencies]
shade-protocol = { version = "0.1.0", path = "../../packages/shade_protocol", features = [
  "treasury",
  "dao",
  "utils",
  "snip20",
  "manager",
  "staking",
  "storage_plus",
] }
cosmwasm-std = { git = "https://github.com/scrtlabs/cosmwasm", branch = "secret" }
cosmwasm-schema = { git = "https://github.com/CosmWasm/cosmwasm", commit = "1e05e7e" }
schemars = "0.7"
chrono = "0.4.19"

[dev-dependencies]
shade-multi-test = { path = "../../packages/multi_test", features = [ 
  "treasury", 
  "treasury_manager", 
  "scrt_staking", 
  "snip20",
  "admin",
] }
serde_json = "1.0"
treasury = { path = "../treasury" }
shade-admin-multi-test = { git = "https://github.com/securesecrets/shadeadmin.git"}
