[package]
name = "stkd_scrt"
version = "0.1.0"
authors = ["Jack Swenson <jacksonswenson22@gmail.com>"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["shade-protocol/backtraces"]

[dependencies]
shade-protocol = { version = "0.1.0", path = "../../../packages/shade_protocol", features = [
  "adapter",
  "dao",
  "stkd_scrt",
  "treasury",
  "math",
  "storage_plus",
] }

[dev-dependencies]
shade-multi-test = { path = "../../../packages/multi_test", features = [ 
  "scrt_staking", 
  "snip20", 
  "admin"
] }
